@@ -3,41 +3,53 @@
  */
 package edu.caltech.ipac.firefly.server.db;
 
-import edu.caltech.ipac.firefly.data.FileInfo;
+import edu.caltech.ipac.firefly.data.ServerEvent;
 import edu.caltech.ipac.firefly.data.ServerRequest;
 import edu.caltech.ipac.firefly.data.TableServerRequest;
+import edu.caltech.ipac.firefly.data.table.SelectionInfo;
+import edu.caltech.ipac.firefly.server.RequestOwner;
 import edu.caltech.ipac.firefly.server.ServerContext;
 import edu.caltech.ipac.firefly.server.db.spring.JdbcFactory;
+import edu.caltech.ipac.firefly.server.events.FluxAction;
+import edu.caltech.ipac.firefly.server.events.ServerEventManager;
 import edu.caltech.ipac.firefly.server.query.DataAccessException;
 import edu.caltech.ipac.firefly.server.query.EmbeddedDbProcessor;
 import edu.caltech.ipac.firefly.server.query.SearchManager;
 import edu.caltech.ipac.firefly.server.query.SearchProcessor;
 import edu.caltech.ipac.firefly.server.util.Logger;
+import edu.caltech.ipac.firefly.server.util.StopWatch;
 import edu.caltech.ipac.table.*;
+import edu.caltech.ipac.util.AppProperties;
 import edu.caltech.ipac.util.StringUtils;
+import org.json.simple.JSONObject;
 import org.springframework.jdbc.core.BatchPreparedStatementSetter;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.core.simple.SimpleJdbcTemplate;
-import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.TransactionCallbackWithoutResult;
-import org.springframework.transaction.support.TransactionTemplate;
 
 import javax.validation.constraints.NotNull;
-import java.io.File;
-import java.io.IOException;
-import java.math.BigDecimal;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.sql.*;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.*;
 import java.util.Date;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
+import static edu.caltech.ipac.firefly.server.ServerContext.SHORT_TASK_EXEC;
 import static edu.caltech.ipac.firefly.data.TableServerRequest.TBL_FILE_PATH;
 import static edu.caltech.ipac.firefly.data.TableServerRequest.TBL_FILE_TYPE;
-import static edu.caltech.ipac.firefly.server.db.DbCustomFunctions.createCustomFunctions;
+import static edu.caltech.ipac.firefly.server.db.DbAdapter.NULL_TOKEN;
+import static edu.caltech.ipac.firefly.server.db.DbAdapter.ignoreCols;
 import static edu.caltech.ipac.firefly.server.db.DbInstance.USE_REAL_AS_DOUBLE;
 import static edu.caltech.ipac.table.DataGroup.ROW_IDX;
-import static edu.caltech.ipac.util.StringUtils.applyIfNotEmpty;
-import static edu.caltech.ipac.util.StringUtils.isEmpty;
+import static edu.caltech.ipac.table.TableMeta.DERIVED_FROM;
+import static edu.caltech.ipac.util.StringUtils.*;
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.time.ZoneOffset.UTC;
 
 /**
  * @author loi
@@ -45,45 +57,58 @@ import static edu.caltech.ipac.util.StringUtils.isEmpty;
  */
 public class EmbeddedDbUtil {
     private static final Logger.LoggerImpl logger = Logger.getLogger();
+    private static final int MAX_COL_ENUM_COUNT = AppProperties.getIntProperty("max.col.enum.count", 32);
+    static final String DD_INSERT_SQL = "insert into %s_DD values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)";
+    static final String DD_CREATE_SQL = "create table %s_DD "+
+            "(" +
+            "  cname    varchar(64000)" +
+            ", label    varchar(64000)" +
+            ", type     varchar(255)" +
+            ", units    varchar(255)" +
+            ", null_str varchar(255)" +
+            ", format   varchar(255)" +
+            ", fmtDisp  varchar(64000)" +
+            ", width    int" +
+            ", visibility varchar(255)" +
+            ", sortable   boolean" +
+            ", filterable boolean" +
+            ", fixed      boolean" +
+            ", description varchar(64000)" +
+            ", enumVals varchar(64000)" +
+            ", ID       varchar(64000)" +
+            ", precision varchar(64000)" +
+            ", ucd      varchar(64000)" +
+            ", utype    varchar(64000)" +
+            ", ref      varchar(64000)" +
+            ", maxValue varchar(64000)" +
+            ", minValue varchar(64000)" +
+            ", links    TEXT" +
+            ", dataOptions varchar(64000)" +
+            ", arraySize varchar(255)" +
+            ", cellRenderer varchar(64000)" +
+            ", sortByCols varchar(64000)" +
+            ", order_index    int" +
+            ")";
+    static final String META_INSERT_SQL = "insert into %s_META values (?,?,?)";
+    static final String META_CREATE_SQL = "create table %s_META "+
+                    "(" +
+                    "  key      varchar(1024)" +
+                    ", value    varchar(64000)" +
+                    ", isKeyword boolean" +
+                    ")";
+    static final String AUX_DATA_INSERT_SQL = "insert into %s_AUX values (?,?,?,?,?,?)";
+    static final String AUX_DATA_CREATE_SQL = "create table %s_AUX "+
+                            "(" +
+                            "  title     varchar(64000)" +
+                            ", size      int" +
+                            ", groups    TEXT" +                        // we'll put serializable Java objects for these
+                            ", links     TEXT" +
+                            ", params    TEXT" +
+                            ", resources TEXT" +
+                            ")";
 
-    /**
-     * setup a database
-     * @param dbFile  the file to save the database to.
-     * @param dbAdapter DbAdapter to use.. ie sqlite, h2, etc.
-     */
-    public static void createDbFile(File dbFile, DbAdapter dbAdapter) throws IOException {
-        dbAdapter.close(dbFile, true);              // in case database exists in memory, close it and remove all files related to it.
-        dbFile.createNewFile();                     // creates the file
-        createCustomFunctions(dbFile, dbAdapter);   // add custom functions
-    }
-
-    /**
-     * ingest the given datagroup into a database file using the provided DbAdpater.
-     * @param dbFile  the file to save the database to.
-     * @param dg the datagroup containing the data
-     * @param dbAdapter DbAdapter to use.. ie sqlite, h2, etc.
-     * @param forTable the name of the table to ingest to
-     * @return  a FileInfo with sizeInBytes representing to the number of rows.
-     */
-    public static FileInfo ingestDataGroup(File dbFile, DataGroup dg, DbAdapter dbAdapter, String forTable) {
-
-        // remove ROW_IDX or ROW_NUM if exists
-        // these are transient values and should not be persisted.
-        dg.removeDataDefinition(DataGroup.ROW_IDX);
-        dg.removeDataDefinition(DataGroup.ROW_NUM);
-
-        IpacTableUtil.consumeColumnInfo(dg);
-
-        createDataTbl(dbFile, dg, dbAdapter, forTable);
-        ddToDb(dbFile, dg, dbAdapter, forTable);
-        metaToDb(dbFile, dg, dbAdapter, forTable);
-        auxDataToDb(dbFile, dg, dbAdapter, forTable);
-        FileInfo finfo = new FileInfo(dbFile);
-        return finfo;
-    }
-
-    public static void setDbMetaInfo(TableServerRequest treq, DbAdapter dbAdapter, File dbFile) {
-        treq.setMeta(TBL_FILE_PATH, ServerContext.replaceWithPrefix(dbFile));
+    public static void setDbMetaInfo(TableServerRequest treq, DbAdapter dbAdapter) {
+        treq.setMeta(TBL_FILE_PATH, ServerContext.replaceWithPrefix(dbAdapter.getDbFile()));
         treq.setMeta(TBL_FILE_TYPE, dbAdapter.getName());
     }
 
@@ -93,118 +118,91 @@ public class EmbeddedDbUtil {
         return SearchProcessor.getUniqueIDDef(treq);
     }
 
-    public static int createDataTbl(File dbFile, DataGroup dg, DbAdapter dbAdapter, String tblName) {
-
-        DataType[] colsAry = makeDbCols(dg);
-        int totalRows = dg.size();
-
-        String createDataSql = dbAdapter.createDataSql(colsAry, tblName);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).update(createDataSql);
-
-        if (totalRows > 0) {
-            JdbcTemplate jdbc = JdbcFactory.getTemplate(dbAdapter.getDbInstance(dbFile));
-
-            String insertDataSql = dbAdapter.insertDataSql(colsAry, tblName);
-            if (dbAdapter.useTxnDuringLoad()) {
-                TransactionTemplate txnJdbc = JdbcFactory.getTransactionTemplate(jdbc.getDataSource());
-                txnJdbc.execute(new TransactionCallbackWithoutResult() {
-                    public void doInTransactionWithoutResult(TransactionStatus status) {
-                        doTableLoad(jdbc, insertDataSql, dg);
-                    }
-                });
-            } else {
-                doTableLoad(jdbc, insertDataSql, dg);
-            }
-        }
-
-        return totalRows;
-    }
-
-    /**
-     * Similar to execQuery, except this method creates the SQL statement from the given request object.
-     * It need to take filter, sort, and paging into consideration.
-     * @param treq      request parameters used for select, where, order by, and limit
-     * @param dbFile    database file
-     * @param forTable  table to run the query on.  the from part of the statement
-     * @return
-     */
-    public static DataGroupPart execRequestQuery(TableServerRequest treq, File dbFile, String forTable) {
-        DbAdapter dbAdapter = DbAdapter.getAdapter(treq);
-        String selectPart = dbAdapter.selectPart(treq);
-        String wherePart = dbAdapter.wherePart(treq);
-        String orderByPart = dbAdapter.orderByPart(treq);
-        String pagingPart = dbAdapter.pagingPart(treq);
-
-        String sql = String.format("%s from %s %s %s %s", selectPart, forTable, wherePart, orderByPart, pagingPart);
-        DataGroup data = EmbeddedDbUtil.execQuery(dbAdapter, dbFile, sql, forTable);
-
-        int rowCnt = data.size();
-        if (!isEmpty(pagingPart)) {
-            // fetch total row count for the query.. datagroup may contain partial results(paging)
-            String cntSql = String.format("select count(*) from %s %s", forTable, wherePart);
-            rowCnt = JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).queryForInt(cntSql);
-        }
-
-        DataGroupPart page = EmbeddedDbUtil.toDataGroupPart(data, treq);
-        page.setRowCount(rowCnt);
-        if (!isEmpty(treq.getTblTitle())) {
-            page.getData().setTitle(treq.getTblTitle());  // set the datagroup's title to the request title.
-        }
-
-        return page;
-    }
-
-
-    /**
-     * Executes the give sql and returns the results as a DataGroup.  If refTable is provided, it will query the
-     * ?_dd and ?_meta tables of this refTable and add the information into the returned DataGroup.
-     * @param dbAdapter     adapter to use
-     * @param dbFile        database file
-     * @param sql           complete SQL statement
-     * @param refTable      use meta information from this table
-     * @return
-     */
-    public static DataGroup execQuery(DbAdapter dbAdapter, File dbFile, String sql, String refTable) {
-        DbInstance dbInstance = dbAdapter.getDbInstance(dbFile);
-        sql = dbAdapter.translateSql(sql);
-        String ddSql = refTable == null ? null : dbAdapter.getDDSql(refTable);
-
-        try {
-            DataGroup dg = (DataGroup)JdbcFactory.getTemplate(dbInstance).query(sql, rs -> {
-                return dbToDataGroup(rs, dbInstance, ddSql);
-            });
-
-            SimpleJdbcTemplate jdbc = JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile));
-
-            if (refTable != null) {
-                // insert table meta info into the results
-                try {
-                    String metaSql = dbAdapter.getMetaSql(refTable);
-                    jdbc.query(metaSql, (rs, i) -> EmbeddedDbUtil.dbToMeta(dg, rs));
-                } catch (Exception e) {
-                    // ignore.. may not have meta table
-                }
-                // insert aux data info into the results
-                try {
-                    String auxDataSqlSql = dbAdapter.getAuxDataSql(refTable);
-                    jdbc.query(auxDataSqlSql, (rs, i) -> EmbeddedDbUtil.dbToAuxData(dg, rs));
-                } catch (Exception e) {
-                    // ignore.. may not have meta table
-                }
-            }
-
-            return dg;
-        } catch (Exception e) {
-            // catch for debugging
-            logger.debug(String.format("execQuery failed with error: %s \n\t sql: %s \n\t refTable: %s \n\t dbFile: %s", e.getMessage(), sql, refTable, dbFile.getAbsolutePath()) );
-            throw e;
-        }
-    }
 
 
 //====================================================================
 //  common util functions
 //====================================================================
+    public static DataGroup dbToDataGroup(ResultSet rs, DbInstance dbInstance) throws SQLException {
+        DataGroup dg = new DataGroup(null, getCols(rs, dbInstance));
+        return dbToDataGroup(rs, dg);
+    }
+
+    public static DataGroup dbToDataGroup(ResultSet rs, DataGroup dg) throws SQLException {
+        try {
+            advanceCursor(rs);
+        } catch (Exception ignored) {
+            return dg;                // no row found
+        }
+        List<Boolean> isAryType = isColumnTypeArray(dg.getDataDefinitions());
+        do {
+            DataObject row = new DataObject(dg);
+            for (int i = 0; i < dg.getDataDefinitions().length; i++) {
+                DataType dt = dg.getDataDefinitions()[i];
+                Object val = convertToType(dt.getDataType(), rs, i, isAryType.get(i));  // ResultSet index starts from 1
+                row.setDataElement(dt, val);
+            }
+            dg.add(row);
+        } while (rs.next()) ;
+        logger.trace("converting a %,d rows ResultSet into a DataGroup".formatted(dg.size()));
+        return dg;
+    }
+
+    private static Object convertToType(Class clz, ResultSet rs, int idx, boolean isAry) throws SQLException {
+        int cIdx = idx+1;      // ResultSet index starts from 1
+        Object val = rs.getObject(cIdx);
+        if (val == null)         return null;
+        if (clz.isInstance(val)) return val;
+
+        if (isAry) {
+            if (val instanceof Array)   return val;    // we will assume the data type matches
+            return deserialize(val.toString());        // handles base64 encoded Java serialized objects
+        } else if (clz == String.class) {
+            if (val instanceof Blob b) {
+                return new String(b.getBytes(1, (int) b.length()), UTF_8);   // handles binary UTF-8 encoded string
+            } else {
+                return val.toString();
+            }
+        }else if (clz == Double.class) {
+            return rs.getDouble(cIdx);
+        } else if (clz == Float.class) {
+            return rs.getFloat(cIdx);
+        } else if (clz == Integer.class) {
+            return rs.getInt(cIdx);
+        } else if (clz == Long.class) {
+            return rs.getLong(cIdx);
+        } else if (clz == Short.class) {
+            return rs.getShort(cIdx);
+        } else if (clz == Byte.class) {
+            return rs.getByte(cIdx);
+        } else if (clz == Boolean.class) {
+            return rs.getBoolean(cIdx);
+        } else if (clz == Date.class) {
+            if (val instanceof LocalDate d) return java.sql.Date.valueOf(d);        // date only
+            if (val instanceof LocalDateTime d) return Date.from(d.atZone(UTC).toInstant());
+        }
+        throw new SQLException("Can't convert " + rs.getObject(cIdx) + " to " + clz);
+    }
+
+    public static List<DataType> getCols(ResultSet rs, DbInstance dbInstance) throws SQLException {
+        ResultSetMetaData rsmd = rs.getMetaData();
+        List<DataType> cols = new ArrayList<>();
+        boolean useRealAsDouble = dbInstance.getBoolProp(USE_REAL_AS_DOUBLE, false);
+        for (int i = 1; i <= rsmd.getColumnCount(); i++) {
+            String cname = rsmd.getColumnLabel(i);
+            JDBCType type = JDBCType.valueOf(rsmd.getColumnType(i));
+            boolean isArray = type == JDBCType.ARRAY;
+            if (isArray) {
+                String typeDesc = rsmd.getColumnTypeName(i).replace("[]", "");
+                type = JDBCType.valueOf(typeDesc);
+            }
+            Class clz = convertToClass(type, useRealAsDouble);
+            DataType dt = new DataType(cname, clz);
+            if (isArray)    dt.setArraySize("*");
+            cols.add(dt);
+        }
+        return cols;
+    }
 
     /**
      * returns a DataGroup containing of the given cols from the selRows
@@ -213,16 +211,15 @@ public class EmbeddedDbUtil {
      * @param cols              columns to return.  Will return all columns if not given.
      * @return
      */
-    public static DataGroup getSelectedData(ServerRequest searchRequest, List<Integer> selRows, String... cols) {
+    public static DataGroup getSelectedData(ServerRequest searchRequest, List<Integer> selRows, String... cols) throws DataAccessException {
         TableServerRequest treq = (TableServerRequest)searchRequest;
-        EmbeddedDbProcessor proc = (EmbeddedDbProcessor) new SearchManager().getProcessor(searchRequest.getRequestId());
+        EmbeddedDbProcessor proc = (EmbeddedDbProcessor) SearchManager.getProcessor(searchRequest.getRequestId());
         String selCols = cols == null || cols.length == 0 ? "*" : Arrays.stream(cols).map( c -> (c.contains("\"") ? c : "\"" + c + "\"")).collect(Collectors.joining(","));
-        DbAdapter dbAdapter = DbAdapter.getAdapter(treq);
-        File dbFile = proc.getDbFile(treq);
+        DbAdapter dbAdapter = proc.getDbAdapter(treq);
         String tblName = proc.getResultSetID(treq);
         String inRows = selRows != null && selRows.size() > 0 ? StringUtils.toString(selRows) : "-1";
 
-        if (!hasTable(treq, dbFile, tblName)) {
+        if (!dbAdapter.hasTable(tblName)) {
             try {
                 // data does not exists.. recreate it
                 new SearchManager().getDataGroup(treq);
@@ -231,8 +228,8 @@ public class EmbeddedDbUtil {
             }
         }
 
-        String sql = String.format("select %s from %s where %s in (%s)", selCols, tblName, DataGroup.ROW_NUM, inRows);
-        return EmbeddedDbUtil.execQuery(dbAdapter, dbFile, sql ,tblName);
+        String sql = "select %s from %s where %s in (%s)".formatted(selCols, tblName, DataGroup.ROW_NUM, inRows);
+        return dbAdapter.execQuery(sql ,tblName);
     }
 
     /**
@@ -242,7 +239,7 @@ public class EmbeddedDbUtil {
      * @param cols              columns to return.  Will return all columns if not given.
      * @return
      */
-    public static MappedData getSelectedMappedData(ServerRequest searchRequest, List<Integer> selRows, String... cols) {
+    public static MappedData getSelectedMappedData(ServerRequest searchRequest, List<Integer> selRows, String... cols) throws DataAccessException {
         if (cols != null && cols.length > 0) {
             ArrayList<String> colsAry = new ArrayList<>(Arrays.asList(cols));
             if (!colsAry.contains(DataGroup.ROW_NUM)) {
@@ -264,7 +261,7 @@ public class EmbeddedDbUtil {
         return results;
     }
 
-    public static DataGroupPart getSelectedDataAsDGPart(ServerRequest searchRequest, List<Integer> selRows, String... cols) {
+    public static DataGroupPart getSelectedDataAsDGPart(ServerRequest searchRequest, List<Integer> selRows, String... cols) throws DataAccessException{
         return toDataGroupPart(getSelectedData(searchRequest, selRows, cols), (TableServerRequest) searchRequest);
     }
 
@@ -272,73 +269,94 @@ public class EmbeddedDbUtil {
         return new DataGroupPart(data, treq.getStartIndex(), data.size());
     }
 
+    public static void updateColumn(DbAdapter dbAdapter, DataType dtype, String expression, String editColName, String preset, String resultSetID, SelectionInfo si) throws DataAccessException {
+        dbAdapter.updateColumn(dtype, expression, editColName, preset, resultSetID, si);
+    }
 
-//====================================================================
-//  O-R mapping functions
-//====================================================================
+    public static void addColumn(DbAdapter dbAdapter, DataType dtype, String expression) throws DataAccessException {
+        addColumn(dbAdapter, dtype, expression, null, null, null);
+    }
 
-    public static DataGroup dbToDataGroup(ResultSet rs, DbInstance dbInstance, String ddSql) throws SQLException {
+    public static void addColumn(DbAdapter dbAdapter, DataType dtype, String expression, String preset, String resultSetID, SelectionInfo si) throws DataAccessException {
+        dbAdapter.addColumn(dtype, -1, expression, preset, resultSetID, si);
 
-        DataGroup dg = new DataGroup(null, getCols(rs, dbInstance));
+    }
 
-        if (ddSql != null) {
-            try {
-                JdbcFactory.getSimpleTemplate(dbInstance).query(ddSql, (ddrs, i) -> dbToDD(dg, ddrs));
-            } catch (Exception e) {
-                // ignore.. may not have DD table
-            }
-        }
+    static String getFieldDesc(DataType dtype, String expression, String preset) {
+        String desc = isEmpty(dtype.getDesc()) ? "" : dtype.getDesc();
+        String derivedFrom = isEmpty(preset) ? expression : "preset:" + preset;
+        return "(%s=%s) %s".formatted(DERIVED_FROM, derivedFrom, desc);     // prepend DERIVED_FROM value into the description.  This is how we determine if a column is derived.
+    }
 
-        if (rs.isBeforeFirst()) rs.next();
-        if (!rs.isFirst()) return dg;    // no row found
-        do {
-            DataObject row = new DataObject(dg);
-            for (int i = 0; i < dg.getDataDefinitions().length; i++) {
-                DataType dt = dg.getDataDefinitions()[i];
-                int idx = i + 1;
-                Object val = rs.getObject(idx);
-                if (dt.getDataType() == Float.class && val instanceof Double) {
-                    // this is needed because hsql stores float as double.
-                    val = ((Double) val).floatValue();
-                } else if (dt.getDataType() == Double.class && val instanceof BigDecimal) {
-                        // When expression involved big number like, long(bigint), BigDecimal is returned. Need to convert that back to double
-                        val = ((BigDecimal) val).doubleValue();
+    public static void deleteColumn(DbAdapter dbAdapter, String cname) {
+        dbAdapter.deleteColumn(cname);
+    }
+
+    public static void enumeratedValuesCheckBG(DbAdapter dbAdapter, DataGroupPart results, TableServerRequest treq) {
+        RequestOwner owner = ServerContext.getRequestOwner();
+        ServerEvent.EventTarget target = new ServerEvent.EventTarget(ServerEvent.Scope.SELF, owner.getEventConnID(),
+                owner.getEventChannel(), owner.getUserKey());
+        SHORT_TASK_EXEC.submit(() -> {
+            enumeratedValuesCheck(dbAdapter, results, treq);
+            DataGroup updates = new DataGroup(null, results.getData().getDataDefinitions());
+            updates.getTableMeta().setTblId(results.getData().getTableMeta().getTblId());
+            JSONObject changes = JsonTableUtil.toJsonDataGroup(updates);
+            changes.remove("totalRows");        //changes contains only the columns with 0 rows.. we don't want to update totalRows
+
+            FluxAction action = new FluxAction(FluxAction.TBL_UPDATE, changes);
+            ServerEventManager.fireAction(action, target);
+        });
+    }
+    public static void enumeratedValuesCheck(DbAdapter dbAdapter, DataGroupPart results, TableServerRequest treq) {
+        StopWatch.getInstance().start("enumeratedValuesCheck: " + treq.getRequestId());
+        enumeratedValuesCheck(dbAdapter, results.getData().getDataDefinitions());
+        StopWatch.getInstance().stop("enumeratedValuesCheck: " + treq.getRequestId()).printLog("enumeratedValuesCheck: " + treq.getRequestId());
+    }
+
+    public static void enumeratedValuesCheck(DbAdapter dbAdapter, DataType[] inclCols) {
+        if (inclCols != null && inclCols.length > 0)
+        try {
+            String cols = Arrays.stream(inclCols)
+                    .filter(dt -> maybeEnums(dt))
+                    .map(dt -> "count(distinct \"%s\") as \"%s\"".formatted(dt.getKeyName(), dt.getKeyName()))
+                    .collect(Collectors.joining(", "));
+
+            List<Map<String, Object>> rs = JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance())
+                    .queryForList("SELECT %s FROM %s limit 500".formatted(cols, dbAdapter.getDataTable()));
+
+            List<Object[]> params = new ArrayList<>();
+            rs.get(0).forEach( (cname,v) -> {
+                Long count = (Long) v ;
+                if (count > 0 && count <= MAX_COL_ENUM_COUNT) {
+                    List<Map<String, Object>> vals = JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance())
+                            .queryForList("SELECT distinct \"%s\" FROM data order by 1".formatted(cname));
+
+                    DataType col = findColByName(inclCols, cname);
+                    if (col != null && vals.size() <= MAX_COL_ENUM_COUNT) {
+                        String enumVals = vals.stream()
+                                .map(m -> m.get(cname) == null ? NULL_TOKEN : m.get(cname).toString())  // convert to list of value as string
+                                .map(cn -> cn.contains(",") ? "'" + cn + "'" : cn)                      // if there's comma in the column name, enclose it with single quotes
+                                .collect(Collectors.joining(","));                             // combine the values into a comma separated values string.
+                        col.setEnumVals(enumVals);
+                        params.add(new Object[]{enumVals, cname});
                     }
-                row.setDataElement(dt, val);
-            }
-            dg.add(row);
-        } while (rs.next()) ;
-        return dg;
+                }
+            });
+            // update dd table
+            if (params.size() > 0)  dbAdapter.batchUpdate("UPDATE DATA_DD SET enumVals = ? WHERE cname = ?", params);
+        } catch (Exception ex) {
+            // do nothing.. ok to ignore errors.
+        }
     }
 
-    private static void metaToDb(File dbFile, DataGroup dg, DbAdapter dbAdapter, String forTable) {
-        TableMeta meta = dg.getTableMeta();
-        if (meta.isEmpty()) return;
-
-        String createMetaSql = dbAdapter.createMetaSql(forTable);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).update(createMetaSql);
-
-        List<Object[]> data = new ArrayList<>();
-        // take all keywords
-        meta.getKeywords().forEach(kw -> data.add(new Object[]{kw.getKey(), kw.getValue(), kw.isKeyword()}));
-        // then take only meta that's not keywords
-        meta.getAttributeList().stream()
-                .filter(kw -> !kw.isKeyword())
-                .forEach(kw -> data.add(new Object[]{kw.getKey(), kw.getValue(), kw.isKeyword()}));
-        String insertDDSql = dbAdapter.insertMetaSql(forTable);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).batchUpdate(insertDDSql, data);
-    }
-
-    private static int dbToMeta(DataGroup dg, ResultSet rs) {
+    public static int dbToDD(DataGroup dg, ResultSet rs) {
         try {
             do {
-                String key = rs.getString("key");
-                String value = rs.getString("value");
-                boolean isKeyword = rs.getBoolean("isKeyword");
-                if (isKeyword) {
-                    dg.getTableMeta().addKeyword(key, value);
-                } else {
-                    dg.getTableMeta().setAttribute(key, value);
+                String cname = rs.getString("cname");
+                DataType dtype = dg.getDataDefintion(cname, true);
+                // if this column is not in DataGroup.  no need to update the info
+                if (dtype != null) {
+                    dbToDataType(dtype, rs);
                 }
             } while (rs.next());
         } catch (SQLException e) {
@@ -347,203 +365,124 @@ public class EmbeddedDbUtil {
         return 0;
     }
 
-    private static void auxDataToDb(File dbFile, DataGroup dg, DbAdapter dbAdapter, String tblName) {
-
-        String createAuxDataSql = dbAdapter.createAuxDataSql(tblName);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).update(createAuxDataSql);
-
-        List<Object[]> data = new ArrayList<>();
-        data.add( new Object[]
-                {
-                        dg.getTitle(),
-                        dg.size(),
-                        dg.getGroupInfos(),
-                        dg.getLinkInfos(),
-                        dg.getParamInfos(),
-                        dg.getResourceInfos()
-                });
-        String insertDDSql = dbAdapter.insertAuxDataSql(tblName);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).batchUpdate(insertDDSql, data);
-    }
-
-    private static int dbToAuxData(DataGroup dg, ResultSet rs) {
+    public static void dbToDataType(DataType dtype, ResultSet rs) {
         try {
-            do {
-                dg.setTitle(rs.getString("title"));
-                dg.setLinkInfos((List<LinkInfo>) rs.getObject("links"));
-                dg.setGroupInfos((List<GroupInfo>) rs.getObject("groups"));
-                dg.setParamInfos((List<ParamInfo>) rs.getObject("params"));
-                dg.setResourceInfos((List<ResourceInfo>) rs.getObject("resources"));
-            } while (rs.next());
-        } catch (SQLException e) {
-            logger.error(e);
+            applyIfNotEmpty(rs.getString("type"), (s) -> {
+                dtype.setTypeDesc(s);
+                dtype.setDataType(DataType.descToType(s, dtype.getDataType()));     // if desc is unknown, use what's in the database.
+            });
+
+            applyIfNotEmpty(rs.getString("label"), dtype::setLabel);
+            applyIfNotEmpty(rs.getString("units"), dtype::setUnits);
+            dtype.setNullString(rs.getString("null_str"));
+            applyIfNotEmpty(rs.getString("format"), dtype::setFormat);
+            applyIfNotEmpty(rs.getString("fmtDisp"), dtype::setFmtDisp);
+            applyIfNotEmpty(rs.getInt("width"), dtype::setWidth);
+            applyIfNotEmpty(rs.getString("visibility"), v -> dtype.setVisibility(DataType.Visibility.valueOf(v)));
+            applyIfNotEmpty(rs.getString("description"), dtype::setDesc);
+            applyIfNotEmpty(rs.getBoolean("sortable"), dtype::setSortable);
+            applyIfNotEmpty(rs.getBoolean("filterable"), dtype::setFilterable);
+            applyIfNotEmpty(rs.getBoolean("fixed"), dtype::setFixed);
+            applyIfNotEmpty(rs.getString("enumVals"), dtype::setEnumVals);
+            applyIfNotEmpty(rs.getString("ID"), dtype::setID);
+            applyIfNotEmpty(rs.getString("precision"), dtype::setPrecision);
+            applyIfNotEmpty(rs.getString("ucd"), dtype::setUCD);
+            applyIfNotEmpty(rs.getString("utype"), dtype::setUType);
+            applyIfNotEmpty(rs.getString("ref"), dtype::setRef);
+            applyIfNotEmpty(rs.getString("maxValue"), dtype::setMaxValue);
+            applyIfNotEmpty(rs.getString("minValue"), dtype::setMinValue);
+            applyIfNotEmpty(rs.getString("dataOptions"), dtype::setDataOptions);
+            applyIfNotEmpty(rs.getString("arraySize"), dtype::setArraySize);
+            applyIfNotEmpty(rs.getString("cellRenderer"), dtype::setCellRenderer);
+            applyIfNotEmpty(rs.getString("sortByCols"), dtype::setSortByCols);
+
+            if (ignoreCols.contains(dtype.getKeyName())) {
+                dtype.setVisibility(DataType.Visibility.hide);
+            }
+        } catch (Exception e) {
+            logger.warn(e);
         }
-        return 0;
     }
 
-    private static void ddToDb(File dbFile, DataGroup dg, DbAdapter dbAdapter, String tblName) {
+//====================================================================
+//  serialize/deserialize of Java object
+//  Using duckdb appender greatly improve performance when ingesting large volume of data.
+//  But, direct BLOB support is not available.  Therefore, we will serialize Java object
+//  into base64 string for storage.
+//====================================================================
 
-        DataType[] colsAry = makeDbCols(dg);
-        String createDDSql = dbAdapter.createDDSql(tblName);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).update(createDDSql);
-
-        List<Object[]> data = new ArrayList<>();
-        for(DataType dt : colsAry) {
-            data.add( new Object[]
-                    {
-                            dt.getKeyName(),
-                            dt.getLabel(),
-                            dt.getTypeDesc(),
-                            dt.getUnits(),
-                            dt.getNullString(),
-                            dt.getFormat(),
-                            dt.getFmtDisp(),
-                            dt.getWidth(),
-                            dt.getVisibility().name(),
-                            dt.isSortable(),
-                            dt.isFilterable(),
-                            dt.isFixed(),
-                            dt.getDesc(),
-                            dt.getEnumVals(),
-                            dt.getID(),
-                            dt.getPrecision(),
-                            dt.getUCD(),
-                            dt.getUType(),
-                            dt.getRef(),
-                            dt.getMaxValue(),
-                            dt.getMinValue(),
-                            dt.getLinkInfos(),
-                            dt.getDataOptions(),
-                            dt.getArraySize(),
-                            dt.getCellRenderer()
-                    }
-            );
-        }
-        String insertDDSql = dbAdapter.insertDDSql(tblName);
-        JdbcFactory.getSimpleTemplate(dbAdapter.getDbInstance(dbFile)).batchUpdate(insertDDSql, data);
-    }
-
-    private static int dbToDD(DataGroup dg, ResultSet rs) {
+    public static String serialize(Object obj) {
+        if (obj == null) return null;
         try {
-            do {
-                String cname = rs.getString("cname");
-                DataType dtype = dg.getDataDefintion(cname, true);
-
-                if (dtype == null) return 0;          // this column is not in DataGroup.  no need to update the info
-
-                String typeDesc = rs.getString("type");
-                dtype.setTypeDesc(typeDesc);
-                dtype.setDataType(DataType.descToType(typeDesc));
-
-                applyIfNotEmpty(rs.getString("label"), dtype::setLabel);
-                applyIfNotEmpty(rs.getString("units"), dtype::setUnits);
-                dtype.setNullString(rs.getString("null_str"));
-                applyIfNotEmpty(rs.getString("format"), dtype::setFormat);
-                applyIfNotEmpty(rs.getString("fmtDisp"), dtype::setFmtDisp);
-                applyIfNotEmpty(rs.getInt("width"), dtype::setWidth);
-                applyIfNotEmpty(rs.getString("visibility"), v -> dtype.setVisibility(DataType.Visibility.valueOf(v)));
-                applyIfNotEmpty(rs.getString("desc"), dtype::setDesc);
-                applyIfNotEmpty(rs.getBoolean("sortable"), dtype::setSortable);
-                applyIfNotEmpty(rs.getBoolean("filterable"), dtype::setFilterable);
-                applyIfNotEmpty(rs.getBoolean("fixed"), dtype::setFixed);
-                applyIfNotEmpty(rs.getString("enumVals"), dtype::setEnumVals);
-                applyIfNotEmpty(rs.getString("ID"), dtype::setID);
-                applyIfNotEmpty(rs.getString("precision"), dtype::setPrecision);
-                applyIfNotEmpty(rs.getString("ucd"), dtype::setUCD);
-                applyIfNotEmpty(rs.getString("utype"), dtype::setUType);
-                applyIfNotEmpty(rs.getString("ref"), dtype::setRef);
-                applyIfNotEmpty(rs.getString("maxValue"), dtype::setMaxValue);
-                applyIfNotEmpty(rs.getString("minValue"), dtype::setMinValue);
-                applyIfNotEmpty(rs.getObject("links"), v -> dtype.setLinkInfos((List<LinkInfo>) v));
-                applyIfNotEmpty(rs.getString("dataOptions"), dtype::setDataOptions);
-                applyIfNotEmpty(rs.getString("arraySize"), dtype::setArraySize);
-                applyIfNotEmpty(rs.getString("cellRenderer"), dtype::setCellRenderer);
-
-            } while (rs.next());
-        } catch (SQLException e) {
-            logger.error(e);
+            ByteArrayOutputStream bstream = new ByteArrayOutputStream();
+            ObjectOutputStream ostream = new ObjectOutputStream(bstream);
+            ostream.writeObject(obj);
+            ostream.flush();
+            byte[] bytes =  bstream.toByteArray();
+            return Base64.getEncoder().encodeToString(bytes);
+        } catch (Exception e) {
+            logger.warn(e);
+            return null;
         }
-        return 0;
     }
 
-
-    public static List<DataType> getCols(ResultSet rs, DbInstance dbInstance) throws SQLException {
-        ResultSetMetaData rsmd = rs.getMetaData();
-        List<DataType> cols = new ArrayList<>();
-        for (int i = 1; i <= rsmd.getColumnCount(); i++) {
-            String cname = rsmd.getColumnLabel(i);
-            Class type = convertToClass(rsmd.getColumnType(i), dbInstance);
-            DataType dt = new DataType(cname, type);
-            cols.add(dt);
-        }
-        return cols;
+    public static Object deserialize(ResultSet rs, String cname) {
+        return getSafe(() -> deserialize(rs.getString(cname)));
+    }
+    public static Object deserialize(ResultSet rs, int cidx) {
+        return getSafe(() -> deserialize(rs.getString(cidx)));
     }
 
+    public static Object deserialize(String base64) {
+        try {
+            if (base64 == null) return null;
+            byte[] bytes = Base64.getDecoder().decode(base64);
+            ByteArrayInputStream bstream = new ByteArrayInputStream(bytes);
+            ObjectInputStream ostream = new ObjectInputStream(bstream);
+            return ostream.readObject();
+        } catch (Exception e) {
+            logger.warn(e);
+            return null;
+        }
+    }
 
-    //====================================================================
+//====================================================================
 //  privates functions
 //====================================================================
 
-    private static Class convertToClass(int val, DbInstance dbInstance) {
-        JDBCType type = JDBCType.valueOf(val);
-        switch (type) {
-            case CHAR:
-            case VARCHAR:
-            case LONGVARCHAR:
-                return String.class;
-            case TINYINT:
-            case SMALLINT:
-            case INTEGER:
-                return Integer.class;
-            case BIGINT:
-                return Long.class;
-            case FLOAT:
-                return Float.class;
-            case REAL: {
-                if (dbInstance.getBoolProp(USE_REAL_AS_DOUBLE, false)) return Double.class;
-                else return Float.class;
-            }
-            case DOUBLE:
-            case NUMERIC:
-            case DECIMAL:
-                return Double.class;
-            case BIT:
-            case BOOLEAN:
-                return Boolean.class;
-            case DATE:
-            case TIME:
-            case TIMESTAMP:
-                return Date.class;
-            case BINARY:
-            case VARBINARY:
-            case LONGVARBINARY:
-                return String.class;        // treat it as string for now.
-            default:
-                return String.class;
+
+    private static DataType findColByName(DataType[] cols, String name) {
+        for(DataType dt : cols) {
+            if (dt.getKeyName().equals(name)) return dt;
         }
+        return  null;
     }
 
+    private static List<Class> onlyCheckTypes = Arrays.asList(String.class, Integer.class, Long.class, Character.class, Boolean.class, Short.class, Byte.class);
+    private static List<String> excludeColNames = Arrays.asList(DataGroup.ROW_IDX, DataGroup.ROW_NUM);
+    private static boolean maybeEnums(DataType dt) {
+        return onlyCheckTypes.contains(dt.getDataType()) && !excludeColNames.contains(dt.getKeyName());
 
-
-    private static void doTableLoad(JdbcTemplate jdbc, String insertDataSql, DataGroup data) {
-
-        jdbc.batchUpdate(insertDataSql, new BatchPreparedStatementSetter() {
-            public void setValues(PreparedStatement ps, int i) throws SQLException {
-                Object[] row = data.get(i).getData();
-                Object[] rowWithIdx = new Object[ row.length + 2];
-                System.arraycopy(row, 0, rowWithIdx, 0, row.length);
-                rowWithIdx[row.length] = i;
-                rowWithIdx[row.length+1] = i;
-
-                for (int cidx = 0; cidx < rowWithIdx.length; cidx++) ps.setObject(cidx+1, rowWithIdx[cidx]);
-            }
-            public int getBatchSize() {
-                return data.size();
-            }
-        });
     }
 
-    private static DataType[] makeDbCols(DataGroup dg) {
+    static Class convertToClass(JDBCType type, boolean useRealAsDouble) {
+        return switch (type) {
+            case CHAR, VARCHAR, LONGVARCHAR -> String.class;
+            case TINYINT    -> Byte.class;
+            case SMALLINT   -> Short.class;
+            case INTEGER    -> Integer.class;
+            case BIGINT     -> Long.class;
+            case FLOAT  -> Float.class;
+            case REAL -> useRealAsDouble ? Double.class : Float.class;
+            case DOUBLE, NUMERIC, DECIMAL   -> Double.class;
+            case BIT, BOOLEAN -> Boolean.class;
+            case DATE, TIME, TIMESTAMP  -> Date.class;
+            case BINARY, VARBINARY, LONGVARBINARY -> String.class;
+            default -> String.class;
+        };
+    }
+
+    public static DataType[] makeDbCols(DataGroup dg) {
         DataType[] cols = new DataType[dg.getDataDefinitions().length + 2];
         if (dg.getDataDefintion(ROW_IDX) != null) {
             logger.error("Datagroup should not have ROW_IDX in it at the start.");
@@ -564,24 +503,64 @@ public class EmbeddedDbUtil {
         return v == null ? def : Integer.parseInt(v);
     }
 
+    static void advanceCursor(ResultSet rs) throws SQLException {
+        try {
+            if (rs.isBeforeFirst()) rs.next();
+            if (!rs.isFirst()) throw new SQLWarning("No row found");
+        } catch (Exception ignored) {
+            // if jdbc driver does not support checking, assume cursor is before first row
+            boolean hasData = rs.next();
+            if (!hasData) throw new SQLWarning("No row found");
+        }
+    }
+
+    static void loadDataToDb(JdbcTemplate jdbc, String insertDataSql, DataGroup data) {
+        int loaded = 0;
+        int rows = data.size();
+        while (loaded < rows) {
+            int batchSize = Math.min(rows-loaded, 10000);   // set batchSize limit to 10k to  ensure HUGE table do not require unnecessary amount of memory to load
+            final int roffset = loaded;
+            loaded += batchSize;
+            jdbc.batchUpdate(insertDataSql, new BatchPreparedStatementSetter() {
+                final DataType[] cols = data.getDataDefinitions();
+                List<Boolean> cIsAry = isColumnTypeArray(cols);
+                public void setValues(PreparedStatement ps, int i) throws SQLException {
+                    int ridx = roffset+i;
+                    for (int cidx = 0; cidx < cols.length; cidx++)  {
+                        Object v = data.getData(cols[cidx].getKeyName(), ridx);
+                        if (cIsAry.get(cidx)) {
+                            v = serialize(v);
+                        }
+                        ps.setObject(cidx+1, v);
+                    }
+                    ps.setObject(cols.length+1, ridx);         // add ROW_IDX
+                    ps.setObject(cols.length+2, ridx);         // add ROW_NUM
+                }
+                public int getBatchSize() {
+                    return batchSize;
+                }
+            });
+        }
+    }
 
     /**
-     * This function is to test if a table exists in the given database.
-     * It's using a get count and catches exception to determine if the given table exists.
-     * It will work across all databases, but it's not optimal.  Change to specific implementation when needed.
-     * @param treq
-     * @param dbFile
-     * @param tblName
-     * @return
+     * Checks if the specified columns contain array data types
+     * @param cols columns to search
+     * @return  a list of boolean indicating if a column contains array data type
      */
-    public static boolean hasTable(TableServerRequest treq, File dbFile, String tblName) {
-        try {
-            DbInstance dbInstance = DbAdapter.getAdapter(treq).getDbInstance(dbFile);
-            JdbcFactory.getSimpleTemplate(dbInstance).queryForInt(String.format("select count(*) from %s", tblName));
-            return true;
-        } catch (Exception e) {
-            return false;
-        }
+    public static List<Boolean> isColumnTypeArray(DataType[] cols) {
+        return Arrays.stream(cols).map(c -> c.isArrayType()).toList();
+    }
+
+    /**
+     * @param cols columns to search
+     * @return  a list of
+     */
+    public static List<Integer> colIdxWithArrayData(DataType[] cols) {
+        return IntStream.range(0, cols.length)
+                .mapToObj(i -> cols[i].isArrayType() ? i : -1)
+                .filter(i -> i >= 0)
+                .collect(Collectors.toList());
     }
 
 }
